[package]
name = "eth-sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bytes = "1.4.0"
hex = "0.4.3"

ethers-providers = "2.0.10"
ethers-core = "2.0.10"
reth-db = { git = "https://github.com/paradigmxyz/reth.git" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth.git" }
reth-provider = { git = "https://github.com/paradigmxyz/reth.git" }
reth-beacon-consensus = { git = "https://github.com/paradigmxyz/reth.git" }
reth-blockchain-tree = { git = "https://github.com/paradigmxyz/reth.git" }
reth-revm = { git = "https://github.com/paradigmxyz/reth.git" }
reth-interfaces = { git = "https://github.com/paradigmxyz/reth.git" }
revm = { git = "https://github.com/bluealloy/revm", rev = "516f62cc", features = ["ethersdb"] }
eyre = "0.6.8"
reqwest = { version = "0.11", default-features = false }
dotenv = "0.15.0"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread", "tracing"] }
